<resources>
    <string name="app_name" translatable="false">App Tracking</string>
    <string name="welcome">Welcome.</string>
    <string name="login_tip">Sign yourself in using a registered username and password.</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="create_one">Create one.</string>
    <string name="login">Login</string>
    <string name="terms_and_services_notice">By clicking <b>Create</b>, you agree to our <b>terms and services.</b></string>
    <string name="create">Create</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="go_to_login">Login.</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="gender">Gender</string>
    <string name="email_address">Email address</string>
    <string name="name_of_university">Name of University</string>
    <string name="year">Year</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="create_new_account">Create new account.</string>
    <string name="information_required">Please complete the form below.</string>
    <string name="help_text_username">At least 6 characters (special characters not allowed)</string>
    <string name="help_text_password">At least 8 characters</string>
    <string name="forgot_your_password_try">"Forgot your password? Try "</string>
    <string name="reset_password">reset password.</string>
    <string name="please_wait">Please wait..</string>
    <string name="fetching_current_user">Fetching current user..</string>
    <string name="logging_in">Logging in..</string>
    <string name="invalid_username_or_password">"* Invalid username or password"</string>
    <string name="processing">Processing..</string>
    <string name="dialog_negative_button">Cancel</string>
    <string name="please_login_to_continue">Please login to continue.</string>
    <string name="logged_in_as">Logged in as %1$s</string>
    <string name="sign_up_success">Successfully, your account is ready!\nPlease login to continue.</string>
    <string name="unexpected_error">An unexpected error has occurred, please try again.</string>
    <string name="access_denied">Access denied!</string>
    <string name="network_error">Connection failed! Try reconnect to a network then try again.</string>
    <string name="is_not_valid">* %1$s is not valid!</string>
    <string name="must_match_with_password">* Must match with password!</string>
    <string name="account_already_exist">* An account with this username already exists.</string>
    <string name="in_range_1_8">In range 1–8</string>
    <string name="one_or_more_fields_are_not_valid">One or more fields are not valid.</string>
    <string name="birth_place">Birth place</string>
    <string name="display_name">Display name</string>
    <string name="display_name_help_text">Name to display to other users.\nAt least 4 characters.</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="home_screen_tabs_navigator">Home screen tabs navigator</string>
    <string name="user_manager">User manager (Updating information only available for Admin)</string>
    <string name="notifications">Notifications</string>
    <string name="edit_personal_information">Edit personal information</string>
    <string name="log_out">Log out</string>
    <string name="preferences">Preferences</string>
    <string name="exit_application">Exit application</string>
    <string name="dialog_positive_button">OK</string>
    <string name="exitting_notice">You\'re about to exit this application.</string>
    <string name="requesting_for_new_token">Access token is expired, requesting for a new one..</string>
    <string name="error_title">Error!</string>
    <string name="logging_out">Logging out..</string>
    <string name="count_day_tracking">Count day tracking</string>
    <string name="count_day_check_in">Count day check in</string>
    <string name="logout_notice">You\'re going to be logged out.</string>
    <string name="look_for_an_user">Look for an user..</string>
    <string name="reached_page_limit">Reached page limit.</string>
    <string name="failed_to_fetch_search_result">Failed to fetch search result.</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="edit_info">Edit info</string>
    <string name="done">Done</string>
    <string name="back_to_previous_screen">Back to previous screen</string>
    <string name="save_changes">Save changes</string>
    <string name="profile_photo">Profile photo</string>
    <string name="block_this_user">Block this user</string>
    <string name="failed_to_retrieve_user_data">Failed to retrieve user data!</string>
    <string name="limited_action_notice">You don\'t have permission to make any changes here.</string>
    <string name="block_user_notice">This user will no longer have access until you unblock.</string>
    <string name="tracking">Tracking:</string>
    <string name="check_in">Check in:</string>
    <string name="unblock_user">Unblock</string>
    <string name="give_access_to_this_user">Give access to this user?</string>
    <string name="no_notifications">No notifications.</string>
    <string name="no_message">No message.</string>
    <string name="check_in_fab">Check in</string>
    <string name="check_in_successfully">Check in successfully!</string>
    <string name="total_check_in">Total checked in: %d</string>
    <string name="total_tracking">Total tracking: %d</string>
    <string name="content">Content</string>
    <string name="dialog_title_delete">Delete?</string>
    <string name="dialog_message_delete">This item will be delete permanently.</string>
    <string name="completed">Completed!</string>
    <string name="delete">Delete</string>
    <string name="create_new">Create new</string>
    <string name="what_you_ve_done">What you\'ve done..</string>
    <string name="language">Language</string>
    <string name="language_vi" translatable="false">Tiếng Việt</string>
    <string name="language_en" translatable="false">English</string>
    <string name="language_default">* Default</string>
    <string name="language_default_option_explain">* If Default is selected, language will be changed based on your device\'s locale, If it isn\'t supported, English will be set by default.</string>
    <string name="theme">Theme</string>
    <string name="theme_system">System</string>
    <string name="theme_day">Day</string>
    <string name="theme_night">Night</string>
    <string name="connection_lost">Connection lost!</string>
    <string name="waiting_for_network">Waiting for reconnect…</string>
    <string name="permission_denied">Permission denied!</string>
    <string name="permission_denied_message">Whenever you change your mind, navigate to <b>Me => Preferences => Enable notifications</b>.</string>
    <string name="turn_on_notification_message">You might miss some important events or updates unless you let this application notify you when there are changes.</string>
    <string name="turn_on_notifications">Turn on notifications!</string>
    <string name="never_ask_again">Never ask again</string>
    <string name="notification_channel_id" translatable="false">MAIN_CHANNEL</string>
    <string name="main_channel_name">Main channel</string>
    <string name="register_new_token_fail">Failed to register new token</string>
    <string name="untitled">Untitled</string>
    <string name="tracking_timeline">Tracking timeline</string>
    <string name="check_in_history">Check in history</string>
</resources>