<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="seamonster.kraken.androidep7.data.models.User" />

        <import type="seamonster.kraken.androidep7.ui.BindingUtil" />

        <import type="seamonster.kraken.androidep7.util.Patterns" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:padding="12dp"
        android:paddingBottom="100dp"
        tools:context=".ui.signup.SignupFragment">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:text="@string/create_new_account"
                android:textAlignment="center"
                android:textAppearance="?textAppearanceHeadline5" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:text="@string/information_required"
                android:textAlignment="center" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldUsername"
                style="@style/roundedCornerTextField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"
                app:counterEnabled="true"
                app:helperText="@string/help_text_username"
                app:inputPattern="@{Patterns.username}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textUsername"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="@={user.username}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="8dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldFirstName"
                style="@style/roundedCornerTextField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                app:inputPattern="@{Patterns.nonEmpty}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:text="@={user.firstName}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="8dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldLastName"
                style="@style/roundedCornerTextField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                app:inputPattern="@{Patterns.nonEmpty}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textLastName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:text="@={user.lastName}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="8dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fieldDisplayName"
                style="@style/roundedCornerTextField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/display_name"
                app:counterEnabled="true"
                app:helperText="@string/display_name_help_text"
                app:inputPattern="@{Patterns.displayName}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textDisplayName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textAutoComplete"
                    android:maxLines="1"
                    android:text="@={user.displayName}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="8dp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/roundedCornerTextField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    app:endIconMode="dropdown_menu"
                    app:inputPattern="@{Patterns.nonEmpty}">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/textGender"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/gender"
                        android:inputType="none"
                        android:padding="17dp"
                        android:text="@={BindingUtil.stringGender(textGender, user.gender)}"
                        android:textSize="16sp"
                        app:simpleItems="@array/genders" />
                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="8dp"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fieldBirthPlace"
                    style="@style/roundedCornerTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:hint="@string/birth_place"
                    app:inputPattern="@{Patterns.nonEmpty}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textBirthPlace"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPostalAddress"
                        android:text="@={user.birthPlace}" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="8dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/roundedCornerTextField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                app:inputPattern="@{Patterns.emailAddress}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:text="@={user.email}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="8dp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textFieldUniversity"
                    style="@style/roundedCornerTextField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:hint="@string/name_of_university"
                    android:maxWidth="242dp"
                    android:minWidth="242dp"
                    app:inputPattern="@{Patterns.nonEmpty}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textUniversity"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"
                        android:maxLines="1"
                        android:text="@={user.university}" />
                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="8dp"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textFieldYear"
                    style="@style/roundedCornerTextField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:maxWidth="150dp"
                    android:minWidth="150dp"
                    app:helperText="@string/in_range_1_8"
                    app:inputPattern="@{Patterns.year}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textYear"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/year"
                        android:inputType="number"
                        android:padding="16dp"
                        android:text="@={BindingUtil.integerToString(user.year)}"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="8dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldPassword"
                style="@style/roundedCornerTextField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                app:counterEnabled="true"
                app:endIconMode="password_toggle"
                app:helperText="@string/help_text_password"
                app:inputPattern="@{Patterns.password}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:text="@={user.password}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="8dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldRePassword"
                style="@style/roundedCornerTextField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/re_enter_password"
                app:counterEnabled="true"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textRePassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:text="@={user.confirmPassword}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="16dp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_and_services_notice"
                android:textAlignment="center" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="8dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSignUp"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/create"
                android:textAppearance="?textAppearanceOverline"
                android:textSize="14sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="8dp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonGoToLogin"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:text="@string/go_to_login" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</layout>